initial tailwindcss added, styled profile bubble

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gym Helper</title>
+    <link rel="stylesheet" href="/src//Styles/index.css" />
+    <title>Gym Workout Helper</title>
   </head>
-  <body>
+  <body
+    class="h-screen w-screen max-h-screen max-w-screen overflow-x-hidden p-0 m-0"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
