--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body
     class="h-screen w-screen max-h-screen max-w-screen overflow-x-hidden p-0 m-0"
   >
-    <div id="root"></div>
+    <div id="root" class="w-full h-full"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
