--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="/src//Styles/index.css" />
     <title>Gym Workout Helper</title>
   </head>
-  <body
-    class="h-screen w-screen max-h-screen max-w-screen overflow-x-hidden p-0 m-0"
-  >
-    <div id="root" class="w-full h-full"></div>
+  <body class="h-screen w-screen">
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
